--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M5</version>
           <configuration>
-            <test>com.test.Database_Testing.latest_use_brain</test>
+            <test>com.test.Database_Testing.Missing_backupcompleted</test>
           </configuration>
         </plugin>
       </plugins>
